<resources>
    <string name="app_name">Chatty</string>
    <string name="developed_by_saimone">Developed by Saimone</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="next">NEXT</string>
    <string name="enter_the_pin_code_sent_to_your_phone">Enter the pin code sent to your phone</string>
    <string name="resend_pin_code_in_30_sec">Resend pin code in 30 sec</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="finish">FINISH</string>
    <string name="username">Username</string>
    <string name="send_pin_code">SEND PIN CODE</string>
    <string name="pin_code">PIN CODE</string>
    <string name="resend_pin_code">Resend pin code</string>
    <string name="resend_pin_code_seconds">Resend pin code in %1$d seconds</string>
    <string name="welcome">Welcome!</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="chat_screen">Chat Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="search_user">Search User</string>
    <string name="back">Back</string>
    <string name="phone_num_example">+380000000000</string>
    <string name="username_placeholder">%s (Me)</string>
    <string name="write_message_here">Write message here</string>
    <string name="send_message">Send message</string>
    <string name="you_placeholder">You: %1$s</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="add_an_image">Add an image</string>
</resources>