<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="22dp"
    android:weightSum="100"
    tools:context=".LoginPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/chatty_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textColor="@color/smoke_white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="@color/smoke_white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="@color/smoke_white"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="19"
        android:contentDescription="@string/phone_number"
        android:src="@drawable/baseline_phone_android_24"
        app:tint="@color/chatty_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:letterSpacing="0.08"
        android:text="@string/enter_mobile_number"
        android:textColor="@color/charcoal_gray"
        android:textSize="25sp"
        android:layout_weight="8"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_areaCodeDetectedCountry="true"
            app:ccp_defaultPhoneCode="380"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:padding="12dp"
            android:autofillHints="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="22"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:textSize="17sp"
            android:text="@string/send" />

        <ProgressBar
            android:layout_width="32dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/chatty_blue" />

    </LinearLayout>

</LinearLayout>