<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chatty_blue"
        android:paddingHorizontal="5dp"
        android:paddingVertical="4dp">

        <TextView
            android:id="@+id/other_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile_pic_layout"
            android:letterSpacing="0.05"
            android:text="@string/username"
            android:textColor="@color/smoke_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/profile_pic_layout"
            layout="@layout/profile_pic_view"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/back_button" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back"
            app:tint="@color/smoke_white" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/toolbar" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp">

        <EditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/message_send_btn"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="4dp"
            android:hint="@string/write_message_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/message_send_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_message"
            android:padding="8dp"
            android:src="@drawable/baseline_send_message"
            app:tint="@color/chatty_blue" />

    </RelativeLayout>

</RelativeLayout>